<resources>
    <string name="app_name">Ma réu</string>
    <string name="action_settings">Settings</string>

    <string name="supprimer_tout">Tout supprimer</string>
    <string name="filtre_salle">Filtrer par salle</string>
    <string name="filtre_date">Filtrer par date</string>
    <string name="populer">Populer</string>

    <string name="add_meeting">Ajouter une réunion</string>

    <string name="filter">Filtrer</string>

    <string name="date">Date</string>
    <string name="heure">Heure</string>
    <string name="currentDate">xx/xx/xxxx</string>
    <string name="currentTime">xxhxx</string>
    <string name="choisir_salle">Choisissez une salle</string>
    <string name="salle">Salle</string>
    <string name="intervenants">Intervenants</string>
    <string name="a_propos">Sujet de la réunion</string>
    <string name="valider">Valider</string>
    <string name="pas_assez_intervenants">Pas assez d\'intervenants pour créer une réunion.</string>
    <string name="sujet_trop_court">Sujet de réunion trop court.</string>
    <string name="salle_manquante">Vous devez sélectionner une salle.</string>


    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="reunion">Réunion A - 14h00 - Peach</string>
    <string name="emails">nicolas@lamzone.com, bill@lamzone.com</string>

    <string-array name="emails">
        <item>bill@lamzone.com</item>
        <item>rudy@lamzone.com</item>
        <item>nicolas@lamzone.com</item>
        <item>georges@lamzone.com</item>
        <item>billy@lamzone.com</item>
        <item>stephen@lamzone.com</item>
        <item>chino@lamzone.com</item>
        <item>sergio@lamzone.com</item>
    </string-array>

    <string-array name="prenoms">
        <item>Peach</item>
        <item>Mario</item>
        <item>Luidgi</item>
    </string-array>

    <string-array name="salles">
        <item>Salle A</item>
        <item>Salle B</item>
        <item>Salle C</item>
        <item>Salle D</item>
        <item>Salle E</item>
        <item>Salle F</item>
        <item>Salle G</item>
        <item>Salle H</item>
        <item>Salle I</item>
        <item>Salle J</item>
    </string-array>

    <string name="reunion_ajoute">Réunion ajoutée à la liste.</string>

</resources>